update put
